# meliris

./: .gitignore  CITATION.cff  README.md  cnn_lstm_2task_inst.pt  cnn_lstm_2task_inst_lambda2-0.75.pt  cnn_lstm_inst.pt  cnn_transformer_inst.pt  flatten_folder.py  infer_plot.py  lstm_svd.pt  lstm_svd_inst.pt  main.py  pyproject.toml  references.bib  train_lstm.py  数据整理和成果验证.md
cnn_lstm/: __init__.py  infer_plot.py  infer_plot_mul_features.py  model.py  train.py  train_mul_features.py
cnn_lstm_2task/: __init__.py  export_onnx.py  infer_plot.py  infer_plot_mul_features.py  model.py  train.py  train_mul_features.py
cnn_transformer/: __init__.py  infer_plot.py  train.py
common/: __init__.py  config.py  data.py  export_utils.py  postproc.py  train_utils.py  windowed_data.py
dali/: download.py  dump_dali_labels.py  statistics.py
dali/stats/: dali_vocal_interlude.py  dali_window_scan.py  statistics.py
exports/: 17さいのうた。_inst_pred_hyst.json  vocal_誰にもなれない私だから_inst_pred_hyst.json  vocalonly_17さいのうた。_inst_pred_hyst.json  誰にもなれない私だから_inst_pred_hyst.json
gn_cnn_lstm_2task/: __init__.py  export_onnx.py  infer_plot.py  model.py  train.py
lstm/: __init__.py  infer_plot.py  train.py
tools/: dali2labels.py  dump_melspec.py  fix_dali_double_ext.py  flatten_folder.py  labels_plot.py  lrc2labels.py  match_qrc.py  qrc2labels.py  rename_dirs_remove_ext.py  test_infer.py  unseparated_filter.py  vocal_labeler.html
